--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                         </li>
                         <li class="section-item">
                             <i class="fas fa-chart-line"></i>
-                            <span class="section-title">1.3 投资与风险</span>
+                            <a href="/1-3.html"><span class="section-title">1.3 投资与风险</span></a>
                         </li>
                     </ul>
                 </div>
@@ -460,4 +460,5 @@
         });
     </script>
 </body>
+
 </html>
