--- a/1-3.html
+++ b/1-3.html
@@ -352,7 +352,7 @@
         </div>
         
         <footer>
-            <p>证券投资学第一章教学工具 | 设计者：证券投资学教授</p>
+            <p>证券投资学第一章教学工具</p>
         </footer>
     </div>
 
@@ -549,4 +549,5 @@
         updateChart();
     </script>
 </body>
+
 </html>
